Update 47 and 48 added

--- a/index.html
+++ b/index.html
@@ -987,18 +987,95 @@
 </ul>
 
 <h2>Update 48</h2>
-<p>Release Date:</p>
+<p>Release Date: November 5, 2020</p>
 <h3>Main Features:</h3>
 <ul>
-<li>-</li>
+<li>Fables of the Feywild Itemization</li>
+<li>Fables of the Feywild Secret Sauce</li>
+<li>Augment Revamp</li>
+<li style="color:Blue;">Snowpeaks Festival!<ul>
+<li style="color:Blue;">Fight Frosty Champions, collect Frozen Keys, and ride the frozen slide in a new wintery world event!</li>
+</ul></li>
+<li style="color:Blue;">Dryad and the Demigod Itemization</li>
+<li style="color:Blue;">Spell Pass for Artificer, Druid, Bard, and Cleric/Favored Soul Spellbooks</li>
+<li style="color:Blue;">Combat Style Balance Pass</li>
 </ul>
 <h3>Balance:</h3>
 <ul>
-<li>-</li>
+<li style="color:Blue;">Warlock Aura colors now change depending on your Pact Choice.</li>
+<li style="color:Blue;">Enhanced Spellpower from all sources is now typed as Equipment spellpower. This change mostly impacts the Spellpower total for characters that use Ravenloft belts and Legendary Greensteel items.</li>
 </ul>
 <h3>Bugfixes:</h3>
 <ul>
-<li>-</li>
+<li>Sense Weakness now provides its correct helpless damage multiplier.</li>
+<li style="color:Blue;">Illusory Sprite is now a familiar option in the Feydark Illusionist tree.</li>
+<li style="color:Blue;">Randomly-generated armor, robes, outfits, docents, and shields now have a lower chance to appear with Spell Power and Turn Undead properties, and now have a higher chance to appear with defensive effects. Note that Orbs remain unchanged.</li>
+<li style="color:Blue;">The Prince's Sceptre and the Queen's Sceptre now have their correct visual appearances.</li>
+<li style="color:Blue;">Augments with the Sheltering benefit now also apply Magic Resistance Rating.</li>
+<li style="color:Blue;">Resistance augments now scale correctly.</li>
+<li style="color:Blue;">Docents in the Feywild now have their correct name and description.</li>
+<li style="color:Blue;">Corrected descriptions for Spell Focus and Sheltering augments.</li>
+<li style="color:Blue;">Set Bonus augments now have more information describing their sets.</li>
+<li style="color:Blue;">The Firefly Garb now has its proper set bonus.</li>
+<li style="color:Blue;">Attribute scaling augments no longer display an erroneous buff on your buff bar when slotted.</li>
+<li style="color:Blue;">The Sphere of Souls now drops with Profane Well Rounded 2.</li>
+<li style="color:Blue;">Thrown weapons from Fables of the Feywild now have their appropriate physics set.</li>
+<li style="color:Blue;">The Crown of Summer received via items is no longer removed on death.</li>
+<li style="color:Blue;">The DC for the Gloryborne Glove is no longer removed on death.</li>
+<li style="color:Blue;">Thorn Boots now have an updated tooltip.</li>
+<li style="color:Blue;">The Pendant of Bottled Sunlight now has actual charges and now properly casts.</li>
+<li style="color:Blue;">Feywild set bonuses have had several bugs fixed with their values.</li>
+<li style="color:Blue;">Fixed the description of Maiming.</li>
+<li style="color:Blue;">The Shield of Snow effect now works correctly.</li>
+<li style="color:Blue;">Items found in random loot via end rewards or chests will now display their augment slots immediately.</li>
+<li style="color:Blue;">Items in your character bank with empty slots will now display their augment slots without requiring you to log out and in again with them in your inventory.</li>
+<li style="color:Blue;">Items in your shared bank with empty slots will now display their augment slots once you move them into your inventory, without requiring you to log out and log back in again.</li>
+<li style="color:Blue;">Items that you remove Legacy Augments from will now have their empty new augment slots display immediately without requiring you to log out and in again with them in your inventory.</li>
+<li style="color:Blue;">All sources of preslotted augments have been removed from the game.</li>
+<li style="color:Blue;">Many augment tooltips have been corrected.</li>
+<li style="color:Blue;">The effects of the Insightful Dexterity and Constitution augments have un-swapped.</li>
+<li style="color:Blue;">The Master's Gift is now Bound to AccountIcon tooltip.png.</li>
+<li style="color:Blue;">The Vitality +20 Augment is now on the reward list for Tapestry turn-ins.</li>
+<li style="color:Blue;">Unslotting a Deconstructor Legacy Augment that was in a Purple Legacy slot no longer switches the resulting augment slot to Orange, and visa-versa.</li>
+<li style="color:Blue;">​The Spring Feywild set has had its bonuses corrected.</li>
+<li style="color:Blue;">Greater Color Spray in the Feydark Illusionist enhancement tree now has its proper saving throw.</li>
+<li style="color:Blue;">Spells and abilities that block Magic Missiles now correctly block Chain Missiles' secondary cast portions as well.</li>
+<li style="color:Blue;">Reaper Boosts now last their listed duration of 30 seconds.</li>
+<li style="color:Blue;">Reaper Physical Resistance Rating now boosts its listed 10/20/30 PRR.</li>
+<li style="color:Blue;">Renewal now affects Undead and Warforged players.</li>
+<li style="color:Blue;">The Enchantment DC display in the Details (plus) tab no longer looks for Transmutation bonuses instead of Enchantment bonuses.</li>
+<li style="color:Blue;">Snowpeaks Coins have had their description updated to let people know where they can turn in the ingredients (Flurry in the Hall of Heroes while the festival is active).</li>
+<li style="color:Blue;">Frozen Keys purchased from the DDO Store are now properly Bound to Account.</li>
+<li style="color:Blue;">Snowpeaks Festival reward cosmetics are no longer available to trade with the Glamerdust trader in the Hall of Heroes.</li>
+<li style="color:Blue;">Elixirs of Frosty Luck now continue to provide their benefit after a character death.</li>
+<li style="color:Blue;">Some public areas will now snow when the Snowpeaks Festival is active.</li>
+<li style="color:Blue;">Sentient Weapons and Sentient Artifacts no longer require being unequipped and re-equipped after a log-on to see their effects</li>
+<li style="color:Blue;">You can no longer unslot augments while your inventory is full.</li>
+<li style="color:Blue;">Paladin Knight of the Chalice's Blessed Purpose stacks are now properly titled "Blessed Purpose".</li>
+<li style="color:Blue;">Paladin KOTC's Champion of Good no longer gives an unlisted change (from +3 to +5) to the amount of Melee and Ranged Power each stack of Blessed Purpose gives; it instead only increases the max stack size to 25, as listed.</li>
+<li style="color:Blue;">Renegade Mastermaker: removed Conjure Component from the game.</li>
+<li style="color:Blue;">Fixed several warlock visual effects being the wrong color.</li>
+<li style="color:Blue;">The Cookie Jar now holds the Cookies from the Anniversary Event.</li>
+<li style="color:Blue;">Several Feywild items have had their effects hidden from the buff bar to prevent visual clutter.</li>
+<li style="color:Blue;">Frozen Keys no longer fit inside of Ingredient Bags. If you have Keys that are currently inside of those bags, they may be removed but will not return to within the bag once you have done so.</li>
+<li style="color:Blue;">All Raid Runes (except for Shroud) can now be used by double-clicking them instead of needing to go to the questgiver NPC.</li>
+<li style="color:Blue;">The Multivial spell like ability can now be cast directionally.</li>
+<li style="color:Blue;">The Beacon of Magic set now correctly boosts poison spellpower.</li>
+<li style="color:Blue;">Stiffen Skin's tooltip has been corrected.</li>
+<li style="color:Blue;">The Stone of the Savant enhancement's tooltip has been corrected.</li>
+<li style="color:Blue;">The tooltip for Orchidium in the Spellcasting Feat is now accurate.</li>
+<li style="color:Blue;">The Curative Admixture version of Heal now does everything Heal is supposed to do.</li>
+<li style="color:Blue;">Heartstopper poison now allows the correct metamagic feats to be used with it.</li>
+<li style="color:Blue;">The sorcerer version of Meteor Swarm now has its intended cooldown of six seconds.</li>
+<li style="color:Blue;">Hand and a half weapons now properly function with offhand versatility.</li>
+<li style="color:Blue;">Corrected tooltips in the Favored Soul Angel of Vengeance tree.</li>
+<li style="color:Blue;">Corrected tooltips in the Cleric Divine Disciple tree.</li>
+<li style="color:Blue;">Natural Fighting now gives its expected amount of ability score modifier to damage, and Perfect Natural Fighting now properly boosts Epic Defensive Fighting.</li>
+<li style="color:Blue;">Epic Defensive Fighting now lists the feats that qualify for it better.</li>
+<li style="color:Blue;">Corrected tooltips in Cleric Domains.</li>
+<li style="color:Blue;">Corrected an issue with the Rosethorn Necklace's Thorn of the Rose ability that could cause a character to become improperly Exhausted.</li>
+<li style="color:Blue;">Quenched now works on the Bottled Rainstorm.</li>
+<li style="color:Blue;">Boon of Undeath and Greater Boon of Undeath once again function.</li>
 </ul>
 <h3>Engineering:</h3>
 <ul>
@@ -1006,18 +1083,72 @@
 </ul>
 
 <h2>Update 47</h2>
-<p>Release Date:</p>
+<p>Release Date: October 12th, 2020</p>
 <h3>Main Features:</h3>
 <ul>
-<li>-</li>
+<li>Itemization<ul>
+<li>Dungeon: Promise of Fire</li>
+<li>Raid: A Vision of Destruction + New Legendary Version</li>
+<li>Raid: The Lord of Blades + New Legendary Version</li>
+<li>Raid: The Master Artificer + New Legendary Version</li>
+<li>Overhaul of Alchemical Crafting</li></ul></li>
+<li>Feydark Illusionist Enhancement Tree</li>
 </ul>
 <h3>Balance:</h3>
 <ul>
-<li>-</li>
+<li>New Generation 2 split-set filigree have been released, check the Threads of Fate crafting window to see them.</li>
+<li>The Scion of the Feywild Legendary feat now grants +4 Illusion DCs instead of +2.</li>
+<li>The price for an Immortal's Heart has been reduced to 2500 Codex Runes.</li>
+<li>The spell Color Spray is now a level 1 spell available in Wizard, Sorcerer, Bard, and Warlock spellbooks. It works the same as Greater Color Spray but does not cause Helplessness.</li>
 </ul>
 <h3>Bugfixes:</h3>
 <ul>
-<li>-</li>
+<li>Several Alchemist spells are now properly affected by Reaper crowd control scaling.</li>
+<li>Different Tack in the Swashbuckling bard tree now requires you to be Swashbuckling rather than Single Weapon Fighting.</li>
+<li>Flame Blade has been improved.</li>
+<li>Favored Souls should once again be able to select their level 20 Damage Resistance feats.</li>
+<li>Mage Armor pact spell now appears at the correct spell level.</li>
+<li>Celestial Pact's description now properly states that it requires non-chaotic rather than must be good.</li>
+<li>The Ice Storm spell granted by the Carceri Warlock Pact now correctly casts.</li>
+<li>Mounts found via Daily Dice are now Bound to Account.</li>
+<li>Eldritch Strike and Eldritch Tempest no longer deal out double their listed weapon die, crit range, and crit multiplier bonuses.</li>
+<li>Temporary Hitpoints from Barbarian Occult Slayer's Vampiric Bond now scale as described.</li>
+<li>Magister: Fixed an issue with Null Magic Aura not applying to allies correctly.</li>
+<li>Fury of the Wild: Sense Weakness no longer provides untyped damage on hit, and instead now provides a flat +1 Damage per rank, for a total of +3 Damage.</li>
+<li>Several Inherent feats no longer display an erroneous minimum level of 21.</li>
+<li>Globe of True Imperial Blood now properly enforces its intended minimum level.</li>
+<li>Recently-released new items from Crystal Cove are now fixed to work as expected for items of their type.</li>
+<li>Minimum Level 16 and 20 versions of the Crystal Cove orb The Drowned now has its proper amount of Insightful Evocation Focus instead of its erroneous +0 Quality Evocation Focus.</li>
+<li>Several random loot shields have had their descriptions corrected.</li>
+<li>Smoke Screen no longer overrides certain other concealment bonuses.</li>
+<li>The Rune Arms found in Sharn now have more appropriate icons.</li>
+<li>The Marshwalker set bonus now properly gives its 30% movement speed.</li>
+<li>Sovereign Elixirs of Hidden Potential now have their correct description.</li>
+<li>Cannith Crafting: Unbound Water Breathing, Featherfall, and Deathblock shards no longer erroneously bind items to your character when applied.</li>
+<li>Cannith Crafting: Negative Amplification unbound Cannith Crafting shards will no longer be created bound to account.</li>
+<li>Skull and Pumpkin Head potions are now markedly less loud.</li>
+<li>The Cargo Bay guild amenity now properly increases the quality of random loot rather than adjusts the minimum level.</li>
+<li>The "Raging Strength" item mutation now grants Strength While Raging as described.</li>
+<li>Many shields have had their dice (W) scaled and base dice increased in epic levels.</li>
+<li>Filigree should now respect intended stacking rules within the Shared Bank/Crafting Storage windows.</li>
+<li>Items with Speed should no longer sometimes display their movement speed values as 0/%.</li>
+<li>Temporary Hit Points from the Blood Feast 5-piece Filigree Set (which are granted by activating a Rage feat) are now dispelled by the Dismiss Rage feat.</li>
+<li>Celestia and the other Sunblades now respect Strikethrough.</li>
+<li>The Sharn Boarding Pass cast time has been reduced to match the total activation time of other teleport items.</li>
+<li>Several typos in the Wheloon Prison landscape have been fixed.</li>
+<li>The Bolt spells in the Wizard and Sorcerer Spell list now appear during character creation in alphabetical order instead of at the very bottom.</li>
+<li>Gnome and Deep Gnome Color Spray has been renamed to "Greater Color Spray".</li>
+<li>Spell DCs by school and tactical bonuses are now visible on the character sheet details (+) tab.</li>
+<li>Eladar's Electric Surge, Divine Punishment, and Reverberate are now properly affected by caster level modifications.</li>
+<li>The button used to modify Legendary Greensteel items now specifies its use instead of incorrectly displaying that it was used to Augment items.</li>
+<li>Weapons with expirations (such as Druid's Flameblades) now display those expirations visually in the correct location of the inventory details drop down panel.</li>
+<li>To-Hit bonuses in the triple digits now properly display on the floating dice UI.</li>
+<li>Mounting will now automatically detoggle the Artificer Auto-Runearm Use feat, preventing you from being automatically dismounted.</li>
+<li style="color:Blue;">The Feydark Illusionist familiar now levels up to level 5 properly, instead of getting stuck on level four and then jumping to level six.</li>
+<li style="color:Blue;">The Legendary Alchemical Morningstar now has its correct icon.</li>
+<li style="color:Blue;">The Legendary Magewright's Cloak now correctly boosts Enchantment spells instead of providing Enchantment saves.</li>
+<li style="color:Blue;">The Time of Destiny +1 (Feywild) found within the Ultimate Fan Bundle of the Fables of the Feywild expansion pack now correctly state that you must be level 20 or above to consume it.</li>
+<li style="color:Blue;">The Purity filigree now properly provides its Mummy Rot Ward benefit against mummies in the Night Revels event.</li>
 </ul>
 <h3>Engineering:</h3>
 <ul>
