Update 46 and 45 added

--- a/index.html
+++ b/index.html
@@ -934,6 +934,7 @@
 <li>Doublestrike and Doubleshot Overhaul</li>
 <li>Perils of the Planar Eyes Itemization</li>
 <li>Fusible and Malleable Itemization Update</li>
+<li style="color:Blue;">Hardcore League: Madness Champions</li>
 </ul>
 <h3>Balance:</h3>
 <ul>
@@ -1156,41 +1157,181 @@
 </ul>
 
 <h2>Update 46</h2>
-<p>Release Date:</p>
+<p>Release Date: April 23rd, 2020</p>
 <h3>Main Features:</h3>
 <ul>
-<li>-</li>
+<li>Lost Gatekeepers Itemization</li>
+<li style="color:Blue;">New Warlock Pacts<ul>
+<li style="color:Blue;">Celestial</li>
+<li style="color:Blue;">Abyssal</li>
+<li style="color:Blue;">Carceri Storm</li></ul></li>
+<li style="color:Blue;">Random Loot Overhaul</li>
+<li style="color:Blue;">Spiral, the Voice of the Elements now randomly selects its starting element, and equipping and unequipping it will restart the cycle by clearing any active Spiral buffs off of you. It also no longer spams your combat log or uses floaty text when its buffs are applied, and is much less likely to cause lag when equipped.</li>
+<li style="color:Blue;">Reflection of Wave's Improved Water Elemental Form now grants 5% Exceptional Cold Spell Crit Damage instead of 20% Exceptional Cold Spell Crit Chance.</li>
+<li style="color:Blue;">Items that provide a scaling bonus to Speed and Striding now begin at 15% movement speed rather than 5%, and gradually increase to a maximum of 30%.</li>
+<li style="color:Blue;">Holy Aura is now: Allies and yourself gain +4 Sacred bonus to AC, Saves, immunity to charms/mental compulsions for 1 minute per caster level. Nearby enemies must make a fortitude save or be blinded.</li>
 </ul>
 <h3>Balance:</h3>
 <ul>
-<li>-</li>
+<li style="color:Blue;">Hurl Through Hell and Create Thrall have had their base DC changed from 10 to 15.</li>
+<li style="color:Blue;">The level 6 and level 12 core abilities from all four Sorcerer Elemental Savant trees no longer grant +1 Maximum Caster Level with the chosen element.</li>
 </ul>
 <h3>Bugfixes:</h3>
 <ul>
-<li>-</li>
+<li>Paladins no longer gain the benefits of T4 Vigor of Life without training the enhancement first.</li>
+<li>Paladin: Righteous Command now requires level 2 paladin spell components.</li>
+<li>Sinister Chill now applies more reliably on Poison spells</li>
+<li>Fixed Typos in Druid: Nature's Warrior: Ghost Wolf Pack</li>
+<li>Fixed Typos in Cleric: Radiant Servant: Pacifism</li>
+<li>Fixed Typos in Max level chat message</li>
+<li>Corrected typos in the Vistani Knife Training 1 enhancement.</li>
+<li>Sandstorm Glasses no longer drop with Wrist Mythic Boost, and now properly drop with Goggles Mythic Boost.</li>
+<li>Bracers of the Demon's Consort no longer drop with Goggles Mythic Boost, and now properly drop with Wrist Mythic Boost.</li>
+<li>Sentient XP stones are now able to be looted from chests more reliably, and are less likely to get stuck in your inventory.</li>
+<li>Fixed typos in "Proof Against Poison" item effects.</li>
+<li>Some items from Keep on the Borderlands have more appropriate material types.</li>
+<li>Panacea and Angel's Tears potions now properly remove stat damage.</li>
+<li>The values that display for Quality and Insightful Sheltering items have been corrected for accuracy.</li>
+<li>Fixed Typos in the following locations:<ul>
+<li>The Deal and the Demon</li>
+<li>Mask of Deception</li>
+<li>Patriarch's Crypt</li>
+<li>Prison of the Planes</li>
+<li>Catacombs Human Zombies</li>
+<li>Under the Big Top</li></ul></li>
+<li>Hurl Through Hell now has its listed DC.</li>
+<li>Fixed a typo on the spell Flame Blade and the druid's Maul spell.</li>
+<li>Stalwart Pact can once again be cast on allies.</li>
+<li>Divine Augmentation now applies more reliably to divine spells.</li>
+<li>Several spells that are meant to target and heal undead can now do so.</li>
+<li>Righteous Command now scales its duration past its max caster level like other spells.</li>
+<li style="color:Blue;">Alchemist Inflict and Harm SLAs are once again able to hit living enemies.</li>
+<li style="color:Blue;">Favored Soul - Beacon of Hope and Beacon of Grace enhancements now properly affect undead enemies.</li>
+<li style="color:Blue;">Knight of the Chalice's Holy Combatant now grants its correct amount of to-hit and damage.</li>
+<li style="color:Blue;">Unbound Sentient Jewels of 1000 Sentient XP are once again able to be consumed.</li>
+<li style="color:Blue;">The Greater Elder's Knowledge set bonus now functions again and is, "This item set will grant your acid, fire, electric and cold spells a +6% chance to critical hit, and those spells have an additional 10% spell critical damage."</li>
+<li style="color:Blue;">Effects that deal damage to an enemy's ability scores on a critical hit have been renamed to avoid confusion. They were previously named the same as their on-hit counterparts.</li>
+<li style="color:Blue;">Many typos have been corrected.</li>
+<li style="color:Blue;">Alchemist spellbooks are now retained on Lesser Reincarnation, just like their Wizard and Artificer counterparts.</li>
+<li style="color:Blue;">The Insightful bonus to Tactical DC's granted by Divine Might are now correctly typed as Insightful.</li>
+<li style="color:Blue;">Deepwood Stalker's Heavy Draw no longer erroneously applies an old penalty.</li>
+<li style="color:Blue;">Kensai's Keen Edge now works with handwraps.</li>
+<li style="color:Blue;">Nature's Warrior's Ghost Wolf Pack now costs its correct SP cost of 15</li>
+<li style="color:Blue;">Enlightened Spirit's Celestial Spirit is now: Major Form Toggle: When enabled, you float above the ground, gain Feather Falling, are immune to most knockdown effects, and your Eldritch Blasts gain 3d6 Light damage. Passive: Your Eldritch Aura now affects enemies every 2 seconds.</li>
+<li style="color:Blue;">Enlightened Spirit's Ultimate Enlightenment is now: +2 CON, +2 CHA, +20% Competence bonus to Maximum HP, +10 Universal Spellpower, +20 Light Spellpower. While your Eldritch Aura is enabled, you gain full Base Attack Bonus, +10 Melee Power, and +10 Ranged Power.</li>
+<li style="color:Blue;">Shroud of the Zombie has been changed to: Shroud Toggle: You shroud yourself with Negative Energy and assume many of the traits of a Zombie. While in this form, you hunger for brains and gain +4 Constitution, +10 Melee Power, 3 Physical and Magical Resistance Rating, and attack 10% slower. You have +100% critical hit resistance, are healed by Negative Energy, take 50% healing from Positive Energy, and take double damage from Light. You are considered Undead rather than your original type for the purposes of most effects.</li>
+<li style="color:Blue;">Ascendant Shroud has been changed to: While in Shroud of the Zombie, you gain an additional; +30 Melee Power and +10 Physical Resistance Rating, and your attacks deal +10% more damage. You also benefit from a 10% Profane Bonus to Maximum Hit Points.</li>
+<li style="color:Blue;">Divine Crusader's Confront Any Foe now properly enforces its two-second cooldown.</li>
+<li style="color:Blue;">Just Cause more reliably applies its full BaB bonus.</li>
+<li style="color:Blue;">Fury of the Wild once again applies its bonus caster levels.</li>
+<li style="color:Blue;">Fixed an issue where Glass Shards item effects would not do damage because the attack was reapplying it too quickly. This effect can now only apply once every three seconds, allowing the damage over time to tick before a new stack applies. The damage of this effect has been increased from 2d10 to 5d10, and its stack size has been decreased from 100 to 15. Each player can now have their own copy of the damage over time effect on the target.</li>
+<li style="color:Blue;">The Heroic Coat of the Traveler has had its Armor Class reduced to more appropriately match other armors of its minimum level.</li>
+<li style="color:Blue;">Diamonds of Festive Wisdom and Diamonds of Festive Intelligence no longer incorrectly spell Dimonds[sic] when in stacks larger than one.</li>
+<li style="color:Blue;">The Sapphire of Crushing Wave Guard and Globe of Imperial Blood now enforce their proper minimum levels.</li>
+<li style="color:Blue;">Spells that are considered Temporary Item Enchantments, such as Deadly Weapons, no longer override temporary buffs such as Blessed Blades and One Cut. You can still only have one Temporary Item Enchantment at a time.</li>
+<li style="color:Blue;">Fixed an issue where some random loot material types were displaying incorrectly.</li>
+<li style="color:Blue;">Crumbling Jewels of Fortune now point you to the correct Crafting NPC.</li>
+<li style="color:Blue;">Minor Treasure Hunter Elixirs now function correctly.</li>
 </ul>
 <h3>Engineering:</h3>
 <ul>
-<li>-</li>
+<li>The Inventory Details drop down tab now properly displays the Critical Multiplier of your equipped weapons.</li>
+<li style="color:Blue;">Strength scores in the triple digits no longer get cut off in the Character Sheet UI.</li>
 </ul>
 
 <h2>Update 45</h2>
-<p>Release Date:</p>
+<p>Release Date: February 12th, 2020</p>
 <h3>Main Features:</h3>
 <ul>
-<li>-</li>
+<li>Alchemist Class</li>
+<li>Delera's Tomb Itemization Revamp</li>
+<li>Catacombs Itemization Revamp</li>
 </ul>
 <h3>Balance:</h3>
 <ul>
-<li>-</li>
+<li>Various percentage hit point bonuses are being adjusted as follows:<ul>
+<li>Stalwart and Sacred Defender: remain at 20% Competence.</li>
+<li>Nature's Protector: remains at 25% Competence.</li>
+<li>Unyielding Sentinel: remains at 20% Insightful.</li>
+<li>Aasimar stays typed as Sacred, goes to 5%, down from 10%.</li>
+<li>Bladeforged gains 5% Quality in a new Tier 4 (2 AP) in their Racial Tree.</li>
+<li>Paladin 18th core gains 10% Sacred HP (this is also in the above notes for clarity).</li>
+<li>Enlightened Spirit level 20 capstone stays at 20% Sacred.</li>
+<li>Warpriest core 4 (level 12) gets 10% Sacred.</li>
+<li>Occult Slayer tier 5 Bond of Destruction gains 10% Quality.</li>
+<li>Renegade Mastermaker goes to a 10% Quality bonus, down from its former 20% Racial bonus.</li>
+<li>Upgraded Zombie in tier 5 Pale Master goes to 10% Profane.</li>
+<li>Shintao tier 5 gains 10% Quality in Meditation of War earth stance (up from 3% untyped)</li>
+<li>Falconry tier 3 goes to 5% Quality (already 5% just adds a channel)</li>
+<li>Dwarf goes from 4% stacking to 5% Quality</li></ul></li>
+<li>Scion of the Ethereal Plane is now: You have Lesser Displacement and Ghost Touch, along with +6d6 Sneak Attack Dice, +5 Melee and Ranged Power, +4 to all Skills, and a permanent Invisible Guard as per the effect.</li>
+<li>Mounts are now suppressed instead of dispelled while in a tavern. Certain exterior taverns, such as the tavern areas within the Lower Necropolis, The Twelve and Meridia, will not suppress your mount and allow you to move while mounted normally. While suppressed, you move at normal speed and are not visually mounted, but when you leave a suppression area you will automatically remount with no delay. While suppressed, you will still be able to dispel your mount (default left shift) at any time.</li>
+<li>Aasimar's Healing Hands is now capped at twenty character levels.</li>
+<li>New Paladin Spell: Righteous Command - +1 Morale Bonus to Melee and ranged Power per Caster Level, maximum caster level 15.</li>
+<li>Bless now scales with Caster Level (per 5 levels).</li>
+<li>Angelskin now grants a +1 Sacred Bonus to Armor Class and a +1 Racial Bonus to Physical Resistance Rating per Caster Level, maximum caster level 20.</li>
+<li>Prayer now scales with Caster Level (per 5 levels).</li>
+<li>Zeal now has 10% Doubleshot added to it.</li>
+<li>Stalwart Pact now grants five temporary hit points per level instead of every two levels, and a +2 Luck Bonus to Armor Class instead of DR 5/magic.</li>
 </ul>
 <h3>Bugfixes:</h3>
 <ul>
-<li>-</li>
+<li>Primal Avatar core abilities have had typos corrected in their tooltips.</li>
+<li>Fixed some typos in Shiradi's Thrown Attack Speed tooltip.</li>
+<li>Leap of Faith from Exalted Angel no longer holds you in place after activation.</li>
+<li>The Rough Docent now has an enhancement bonus of +2.</li>
+<li>Items with new Ghostbane effects now deal their bane damage to all undead, not just Incorporeal enemies.</li>
+<li>The Boarding Pass to Sharn now uses the same induction time that other Teleport items use, such as the Bottle of Mist and Stormreach d12.</li>
+<li>Legendary Greensteel and Ravenloft Throwing Daggers now properly strike enemies while Improved Precise Shot is active.</li>
+<li>Items that teleport you to specific places have had their cooldowns significantly reduced.</li>
+<li>The base hardness of heroic Greensteel items has been doubled.</li>
+<li>Henshin Mystic focus no longer spams the combat log.</li>
+<li>Heighten Magic's tooltip now clarifies its cost.</li>
+<li>Fixed the border on one of the Vistani Knife Fighter tree icons</li>
+<li>Fixed the Falconry Tree Icon so it didn't poke out the edges in the Universal Tree window.</li>
+<li>Tiefling and Tiefling Scoundrel racial enhancement tree icons are now unique and no longer display the Elf racial icon.</li>
+<li>Harper Agent now has more accurate icons for the ability score selectors</li>
+<li>Know the Angles in the Harper tree now has its proper icon</li>
+<li>Scion of the Ethereal Plane should no longer flicker on your buff bar a lot.</li>
+<li style="color:Blue;">Apothecary's Inflict Critical Wounds SLA in Tier 5 now properly requires Character Level 12.</li>
+<li style="color:Blue;">Apothecary's Panacea Poultice now correctly enforces its touch range.</li>
+<li style="color:Blue;">Apothecary's Panacea Poultice can now benefit from Metamagics.</li>
+<li style="color:Blue;">Apothecary's Alchemical Shield effects are now applied and removed more consistently.</li>
+<li style="color:Blue;">Master Apothecary now properly increases its Max Caster Level.</li>
+<li style="color:Blue;">Alchemists can now take Improved Mental Toughness and Epic Spell Focus.</li>
+<li style="color:Blue;">Vile Chemist's Wave of Poison and Greater Wave of Poison SLA's now properly count as Ceruleite spells.</li>
+<li style="color:Blue;">Angry Arms and Mad Munitions now grant their proper Strikethrough values.</li>
+<li style="color:Blue;">Focus Wide now grants its listed Strikethrough value.</li>
+<li style="color:Blue;">Seeker's Strike has been fixed to work with great axes and great swords again.</li>
+<li style="color:Blue;">Glorious Stand now grants its proper hit points.</li>
+<li style="color:Blue;">Paladin Divine Sacrifice now properly adds +2[W], and adds in Passion's effects (upgraded): On damage: gain +15 Temporary Spell Points. (The U45 Release Notes listed an additional Melee Power buff; this was in error.)</li>
+<li style="color:Blue;">Improved Turning now includes its proper light dice.</li>
+<li style="color:Blue;">Righteous Command's tooltip now properly lists its Sacred bonus.</li>
+<li style="color:Blue;">Stalwart Pact's tooltip has been corrected.</li>
+<li style="color:Blue;">Knight of the Chalice Attack and Damage bonuses with Favored Weapons will now be applied and removed more consistently.</li>
+<li style="color:Blue;">Favored Soul Divine Might can once again be trained.</li>
+<li style="color:Blue;">Half-elf Dilettante: Alchemist now allows you to select +1 Intelligence at Tier 3.</li>
+<li style="color:Blue;">The Epic Voice of the Master now has text noting that it has a maximum number of Filigree Slots of 1. There is no need to apply XP to it.</li>
+<li style="color:Blue;">The General Vendor in the Keep (on the Borderlands) now sells alchemist components.</li>
+<li style="color:Blue;">Gnomes no longer get an incorrect 10% Sacred bonus to max hit points when they take Blur.</li>
+<li style="color:Blue;">Guild Airship portals no longer have a confirmation dialogue.</li>
+<li style="color:Blue;">Knight of the Chalice's Lead the Charge can now target breakables.</li>
+<li style="color:Blue;">Fixed a bug with focused aim not working correctly with Deepwood Stalker.</li>
+<li style="color:Blue;">Shiradi Champion's Stand and Deliver now works correctly even when toggling ranged stances on and off.</li>
+<li style="color:Blue;">Keep on the Borderlands Slayer quest logs no longer show String Table Errors.</li>
+<li style="color:Blue;">Alchemist Vial Smash spells are now Conjuration spells as intended.</li>
+<li style="color:Blue;">Alchemist's Displacement draught and Bottled Boost spells now count properly as Transmutation spells in all situations.</li>
+<li style="color:Blue;">The Alchemist Flesh to Gold spell now uses the correct spell components.</li>
+<li style="color:Blue;">Stalwart Pact now has its appropriate text again.</li>
+<li style="color:Blue;">Melt Lock no longer uses a projectile, and simply allows you to cast it on a targeted locked object at touch range. Melt Lock now costs 12 spell points (less than Knock, but the range is shorter).</li>
+<li style="color:Blue;">The Master of Spellvials feats now work correctly.</li>
+<li style="color:Blue;">Sorcerer core enhancements that increase Caster Levels with particular elements now affect Alchemist damage spells.</li>
+<li style="color:Blue;">Logging in with both a Sentient Weapon and a Minor Artifact equipped will now register and apply the Filigree set bonuses from both items without needing to unequip and re-equip the items.</li>
 </ul>
 <h3>Engineering:</h3>
 <ul>
-<li>-</li>
+<li>If you are ineligible to take a Feat due to an antirequisite, the tooltip of the feat will now display this information.</li>
+<li>Class Level Requirements for feats that required class levels in one of many different classes, such as the Spell Penetration feat, now display their class level requirements in a more concise and clear manner that better illustrates if you've met any of the requirements.</li>
 </ul>
 
 <h2>Update 44</h2>
